fix: text visibility on mobile (FAQs)

--- a/src/scss/blocks/_faqs_accr.scss
+++ b/src/scss/blocks/_faqs_accr.scss
@@ -117,7 +117,7 @@
 
 		@include bp($point_6) {
 			min-height: 14.3rem;
-			max-height: 28.3rem;
+			max-height: 30.3rem;
 		}
 	}
 }
